feat: message reactions
